k8s-examples/vouch-proxy/0-hello-kubernetes-resources.yml
---
apiVersion: v1
kind: Namespace
metadata:
  labels:
    app.kubernetes.io/name: spos
  name: spos
  annotations:
    services.k8s.aws/default-region: eu-north-1
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-kubernetes
  namespace: spos
spec:
  replicas: 2
  selector:
    matchLabels:
      name: hello-kubernetes
  template:
    metadata:
      labels:
        name: hello-kubernetes
    spec:
      containers:
        - name: app
          image: paulbouwer/hello-kubernetes:1.10.1
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: hello-kubernetes
  namespace: spos
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 8080
  selector:
    name: hello-kubernetes
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-kubernetes
  namespace: spos
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-production
#    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  tls:
    - hosts:
        - eks.mabl.se
      secretName: hello-kubernetes-tls-secret
  rules:
    - host: eks.mabl.se
      http:
        paths:
          - path: /hello-kubernetes/
            pathType: Prefix
            backend:
              service:
                name: hello-kubernetes
                port:
                  number: 80
