k8s-examples/vouch-proxy/1-vouch-proxy-resources.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    k8s-app: vouch-proxy
  name: vouch-proxy
  namespace: spos
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: vouch-proxy
  template:
    metadata:
      labels:
        k8s-app: vouch-proxy
    spec:
      containers:
        - name: vouch-proxy
          image: quay.io/vouch/vouch-proxy:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 9090
              protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  labels:
    k8s-app: vouch-proxy
  name: vouch-proxy
  namespace: spos
spec:
  ports:
    - port: 9090
      targetPort: 9090
  selector:
    k8s-app: vouch-proxy
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vouch-proxy
  namespace: spos
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-production
spec:
  tls:
    - hosts:
        - eks.mabl.se
      secretName: vouch-proxy-tls-secret
  rules:
    - host: eks.mabl.se
      http:
        paths:
          - path: /hello-kubernetes/oauth2
            pathType: Prefix
            backend:
              service:
                name: vouch-proxy
                port:
                  number: 9090
